--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: java
 script: 
  - mvn clean verify
- - docker build -t alex/changelog ./sample-application-db-changelog-job
- - docker build -t alex/http ./sample-application-http-api-server
+ - docker build -t azukyx/changelog ./sample-application-db-changelog-job
+ - docker build -t azukyx/http ./sample-application-http-api-server
  - docker login -u $usr -p $pwd
- - docker push azukyx/http:alex/http
- - docker push azukyx/changelog:alex/changelog
+ - docker push azukyx/http
+ - docker push azukyx/changelog
