edit yml travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,15 @@ addons:
   organization: "mouloudthug"
   token:
     secure: $sonarKey # encrypted value of your token
-script: 
- - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=MouloudThug_sample-application-students
- - docker build -t azukyx/changelog ./sample-application-db-changelog-job
- - docker build -t azukyx/http ./sample-application-http-api-server
- - docker login -u $usr -p $pwd
- - docker push azukyx/http
- - docker push azukyx/changelog
+jobs:
+ includes:
+ - stage: test
+   script:
+    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=MouloudThug_sample-application-students
+ - stage: build
+   script:
+    - docker build -t azukyx/changelog ./sample-application-db-changelog-job
+    - docker build -t azukyx/http ./sample-application-http-api-server
+    - docker login -u $usr -p $pwd
+    - docker push azukyx/http
+    - docker push azukyx/changelog
